adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, perferendis nemo aut ea fugit dolore, reprehenderit magnam ad incidunt necessitatibus voluptatem ducimus accusantium architecto reiciendis animi deleniti error voluptates suscipit!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit et aperiam nemo sint iste, harum facere a quod consectetur itaque reiciendis sit consequuntur inventore. Nihil quas quisquam id incidunt iusto!</p>
 </body>
 </html>
